--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6617,11 +6617,11 @@ hr {
   /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#950101+0,630102+50,3d0302+100 */
   background: #950101;
   /* Old browsers */
-  background: -moz-linear-gradient(top, #950101 0%, #630102 50%, #3d0302 100%);
+  background: -moz-linear-gradient(top, #950101 0%, #630102 100%, #56151300 100%);
   /* FF3.6-15 */
-  background: -webkit-linear-gradient(top, #950101 0%, #630102 50%, #3d0302 100%);
+  background: -webkit-linear-gradient(top, #950101 0%, #630102 100%, #3d030200 100%);
   /* Chrome10-25,Safari5.1-6 */
-  background: linear-gradient(to bottom, #950101 0%, #630102 50%, #3d0302 100%);
+  background: linear-gradient(to bottom, #950101 0%, #630102 100%, #3d030200 100%);
   /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#950101', endColorstr='#3d0302',GradientType=0 );
   /* IE6-9 */
@@ -7896,3 +7896,5 @@ del {
 }
 
 /*# sourceMappingURL=style.css.map */
+
+
